--- a/css/raiva.css
+++ b/css/raiva.css
@@ -8,6 +8,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   width: 100vw;
   height: 100vh;
+  background-color: #E73825;
 }
 
 .logo {
@@ -17,6 +18,61 @@ body {
   height: 60px;
   width: 100vw;
   background-color: rgb(255, 255, 255);
+}
+
+.opcoes {
+  display: flex;
+  width: auto;
+  height: 110px;
+  background-color: #000000;
+  justify-content: center;
+  align-items: center;
+}
+
+.perso {
+  background-color: white;
+  width: 90px;
+  height: 90px;
+  margin-right: 10px;
+  border-radius: 5px;
+  transition: all .2s linear;
+}
+
+.raiva {
+  background-image: url(../image/raiva.png);
+  background-size: cover;
+}
+
+.medo {
+  background-image: url(../image/medo.png);
+  background-size: cover;
+}
+
+.alegria {
+  background-image: url(../image/alegria.png);
+  background-size: cover;
+}
+
+.nojo {
+  background-image: url(../image/nojo.png);
+  background-size: cover;
+}
+
+.tristeza {
+  background-image: url(../image/tristeza.png);
+  background-size: cover;
+}
+
+.opcoes:hover :not(:hover) {
+  filter: saturate(0%);
+}
+
+.perso:hover {
+  scale: 1.1;
+}
+
+.perso:nth-child(5) {
+  margin: 0;
 }
 
 .logo img {
@@ -35,7 +91,16 @@ body {
   color: black;
 }
 
-.voltar a:hover {
+.voltar span {
+  margin-left: 10px;
+  transition: all .5s linear;
+}
+
+.voltar span:hover {
+  margin-left: 20px;
+}
+
+.voltar span:hover {
   border-bottom: 3px solid black;
 }
 
@@ -50,46 +115,196 @@ body {
   font-size: 20px;
   font-weight: bold;
   text-transform: uppercase;
+  /* border-bottom: 8px solid black; */
 }
-
 
 .container {
-  width: 100vw;
-  max-width: 1200px;
+  display: flex;
+  justify-content: space-around;
+  max-width: 1350px;
   margin: auto;
-}
-
-.video-area {
+  background-color: #E73825;
+  align-items: center;
   position: relative;
-  height: 0px;
-  padding: 0 0 56.25%;
+  top: 7%;
 }
 
-.video-area video {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border: 0;
+.container video {
+  width: 500px;
+  height: 500px;
+  object-fit: cover;
+  border-radius: 40px;
 }
 
-@media (max-width: 1000px) {
-  .video-area video {
-    top: 50%;
+.container p {
+  color: white;
+  max-width: 50%;
+  font-size: 25px;
+}
+
+@media (max-width: 1100px) {
+  .container {
+    flex-wrap: wrap;
+  }
+
+  .container video {
+    width: 800px;
+    height: 450px;
+  }
+
+  .container p {
+    max-width: 70%;
   }
 }
-@media (max-width: 550px) {
-  .video-area video {
-    top: 80%;
+
+@media (max-width: 880px) {
+  .container {
+    flex-wrap: wrap;
+  }
+
+  .container video {
+    width: 700px;
+    height: 400px;
+  }
+
+  .container p {
+    max-width: 70%;
+  }
+
+  .container p span {
+    display: none;
   }
 }
-@media (max-width: 450px) {
-  .video-area video {
-    top: 90%;
+
+@media (max-width: 760px) {
+  .container {
+    flex-wrap: wrap;
   }
+
+  .container video {
+    width: 500px;
+    height: 400px;
+  }
+
+  .container p {
+    max-width: 70%;
+  }
+
+  .container p span {
+    display: none;
+  }
+}
+
+@media (max-width: 560px) {
+  .container {
+    flex-wrap: wrap;
+  }
+
+  .container video {
+    width: 400px;
+    height: 300px;
+  }
+
+  .container p {
+    max-width: 70%;
+  }
+
+  .container p span {
+    display: none;
+  }
+
+  .perso {
+    width: 60px;
+    height: 60px;
+  }
+
+  .opcoes {
+    height: 80px;
+  }
+
+  .voltar span {
+    display: none;
+  }
+}
+
+@media (max-width: 430px) {
+  .container {
+    flex-wrap: wrap;
+  }
+
+  .container video {
+    width: 300px;
+    height: 300px;
+  }
+
+  .container p {
+    max-width: 70%;
+    font-size: 18px;
+  }
+
+  .container p span {
+    display: none;
+  }
+
+  .perso {
+    width: 50px;
+    height: 50px;
+  }
+
+  .opcoes {
+    height: 70px;
+  }
+
+  .voltar span {
+    display: none;
+  }
+}
+
+@media (max-width: 320px) {
+  .container {
+    flex-wrap: wrap;
+  }
+
+  .container video {
+    width: 250px;
+    height: 200px;
+  }
+
+  .container p {
+    max-width: 70%;
+    font-size: 18px;
+  }
+
+  .container p span {
+    display: none;
+  }
+
+  .perso {
+    width: 40px;
+    height: 40px;
+  }
+
+  .opcoes {
+    height: 50px;
+  }
+
   .voltar {
     display: none;
   }
+}
+
+/* Safari */
+video {
+  -webkit-appearance: none;
+  /* Remove o estilo padrão do Safari */
+}
+
+video::-webkit-media-controls-start-playback-button {
+  display: none;
+  /* Oculta o botão de reprodução padrão do Safari */
+}
+
+video::-webkit-media-controls {
+  overflow: visible !important;
+  /* Garante que os controles do vídeo sejam visíveis */
 }
